feat: add vercel deploy

--- a/app.json
+++ b/app.json
@@ -21,6 +21,10 @@
         "backgroundColor": "#ffffff"
       }
     },
+    "web": {
+      "output": "single",
+      "bundler": "metro"
+    },
     "plugins": [
       "expo-router",
       [
