--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -49,6 +50,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
@@ -62,6 +64,7 @@
     "eslint-plugin-unused-imports": "^4.1.4",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
